--- a/paparazzi-auth/package.json
+++ b/paparazzi-auth/package.json
@@ -2,11 +2,16 @@
   "name": "paparazzi-auth",
   "version": "1.0.0",
   "description": "Program to save authentication",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "jhampac",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^2.3.0",
+    "express": "^4.16.2"
+  }
 }
