--- a/paparazzi-auth/package.json
+++ b/paparazzi-auth/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.3.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mongoose": "^4.13.7",
+    "morgan": "^1.9.0"
   }
 }
