--- a/paparazzi-auth/package.json
+++ b/paparazzi-auth/package.json
@@ -11,9 +11,11 @@
   "author": "jhampac",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "chalk": "^2.3.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "instagram-node": "^0.5.8",
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0"
   }
