--- a/paparazzi-auth/package.json
+++ b/paparazzi-auth/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.2",
     "instagram-node": "^0.5.8",
     "mongoose": "^4.13.7",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "puppeteer": "^0.13.0"
   }
 }
