--- a/dockerize/package.json
+++ b/dockerize/package.json
@@ -11,6 +11,7 @@
   "author": "jhampac",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "morgan": "^1.9.0"
   }
 }
